# a2d

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/buckling/: CMakeLists.txt  QuadLinearElastic.h  ad.py  main.cpp  test_numeric.cpp  test_quad.cpp  toolkit.h  toy_elasticity.cpp  truss.py
examples/elasticity/: CMakeLists.txt  atestflyer.cpp  viewwrapper.h
examples/elasticity/a2d/: CMakeLists.txt  empty_src.cpp
examples/elasticity/sparse/: CMakeLists.txt  block_numeric.h  block_numeric_kokkos.h  empty_src.cpp  sparse_amg.h  sparse_matrix_kokkos.h  sparse_numeric.h
include/sparse/: sparse_matrix.h
